# ZK-Bio-Attendance-Report-local

./: StdBnk25_Private_Key.pub  attendance_report.spec  config.py  generate_reports.py  main.py  pyproject.toml  utils.py
